--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>Conway's Game of Life</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   </head>
   <body>
     <div id="app" class='container-fluid'/>
